[package]
name = "web-scraper"
version = "0.1.0"
authors = ["bradybellini <bbellini@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
select = "0.5.0"